apps/ghost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: ghost
spec:
  selector:
    app.kubernetes.io/name: ghost
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
